<resources>
    <string name="app_name">OnlineTechSupport</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="go">Go</string>
    <string name="login">Login</string>
    <string name="in_service">In Process</string>
    <string name="waiting">Waiting In Hold</string>
    <string name="out_service">Finish Complete</string>
    <string name="add_employees">Add Employee</string>
    <string name="user_name">User Name :</string>
    <string name="password_">Password :</string>
    <string name="manager">Manager</string>
    <string name="online">Online</string>
    <string name="call_center">Call Center</string>
    <string name="type">Type :</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="system_name">System Name :</string>
    <string name="add_system">Add System</string>
    <string name="system_problem">System problem ...</string>
    <string name="customer">Customer</string>
    <string name="phone_number">Phone NO.</string>
    <string name="system">System</string>
    <string name="new_customer">get Customer</string>
    <string name="eng_id">Eng ID :</string>
    <string name="system_no">System No :</string>
    <string name="company_name">Company Name</string>
    <string name="customer_name">Customer Name</string>
    <string name="system_type">System Type</string>
    <string name="hold_customer_list">Hold Customer List</string>
    <string name="sch_customer_list">Schedule Customer List</string>

    <string name="hold">Hold</string>
    <string name="more_information">More Information</string>
    <string name="eng_name">Eng Name :</string>
    <string name="time_loading"> Loading Time :</string>
    <string name="states">States :</string>
    <string name="problem_detail">Problem Detail :</string>
    <string name="done">Done</string>
    <string name="areyouSureExit">Are You Sure Exit?</string>
    <string name="areyouSureDelete">Are You Sure Delete?</string>
    <string name="warning">Warning</string>
    <string name="no">No</string>
    <string name="dialog_ok">Ok</string>
    <string name="call_center_report">Call Center Report</string>
    <string name="company">company</string>
    <string name="check_in_time">Check In</string>
    <string name="check_out_time">Check Out</string>
    <string name="problem">Problem</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="phone">Phone</string>
    <string name="eng">Engineer</string>
    <string name="report">report</string>
    <string name="date">Date</string>
    <string name="no_data_exsist">No Data Exsist</string>
    <string name="list_work"> Service Customer List  </string>
    <string name="convert">Convert</string>
    <string name="solved">Solved</string>
    <string name="convert_to_software_department">Convert To Software Department</string>
    <string name="convert_to_out_door">Convert To Out Door</string>
    <string name="convert_to_contracts_department">Convert To Contracts Department</string>
    <string name="solve_state">Solve State</string>
    <string name="search">Search</string>
    <string name="call_center_name">Call Center Name</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_reason">Transfer Reason</string>
    <string name="transfer_to_another_engineer">Transfer to another Engineer</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="tracking_report">Tracking Report</string>
    <string name="hold_Reason">Hold Reason</string>
    <string name="DashBoard">DashBoard</string>
    <string name="call_center_tec">Call Center Tec</string>
    <string name="Technical">Technical</string>
    <string name="cancel_Reason">Cancel Reason</string>
    <string name="Technical_report">Technical Report</string>
    <string name="Schedule">Schedule</string>
    <string name="Schedule_reason">Schedule Reason</string>
    <string name="systems">Systems</string>
    <string name="required">Required!</string>

    <string name="call_center_Prog">Call Center Prog</string>
    <string name="programmer">programmer</string>
    <string name="Programmer_Report">Programmer Report</string>
    <string name="UserControl">User Control</string>
    <string name="clear">Clear</string>
    <string name="logout">Log Out</string>
    <string name="wating">Wating</string>
    <string name="wait">Waiting</string>
    <string name="danger">Danger  [متعطل]</string>
    <string name="QA">QA Online</string>
</resources>
