<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add_system"
        android:title="@string/add_system"/>

    <item
        android:id="@+id/menu_add_employee"
        android:title="@string/add_employees"/>

    <item
        android:id="@+id/menu_report"
        android:title="@string/call_center_report"/>

    <item
        android:id="@+id/menu_engineers_tracking_report"
        android:title="@string/tracking_report"/>
    <item
        android:id="@+id/menu_tec_report"
        android:title="@string/Technical_report"/>
    <item
        android:id="@+id/menu_prog_report"
        android:title="@string/Programmer_Report"/>
    <item
        android:id="@+id/DashBoard"
        android:title="@string/DashBoard"/>

    <item
        android:id="@+id/UserControl"
        android:title="@string/UserControl"/>
</menu>