<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenColor"
    android:id="@+id/bac1"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bac2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bac_list_2_1"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bac_list_1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/more_information"
            android:textColor="@color/greenColor"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/customer_name"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/customerName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/company_name"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/phone_number"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/system_name"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/system"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/eng_name"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/engName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/time_loading"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/states"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView144"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/problem_detail"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/problem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:layout_weight="1"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView1441"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/solve_state"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/stateOfSolve"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/darkBlueColor"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>