<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bac1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkblue_1"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:visibility="gone"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            app:srcCompat="@drawable/ic_person_add_black_24dp_white"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/tital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:fontFamily="@font/keania_one"
            android:text="@string/add_employees"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bac2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/bac_list_3"
        android:orientation="vertical"
        android:padding="35dp">


        <!--<TableRow-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="5dp"-->
            <!--android:gravity="center"-->
            <!--android:padding="5dp">-->

            <!--<TextView-->
                <!--android:id="@+id/textiew4"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="2"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/eng_id"-->
                <!--android:textColor="@color/black"-->
                <!--android:textSize="16sp" />-->

            <!--<EditText-->
                <!--android:id="@+id/EngId"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:ems="10"-->
                <!--android:inputType="textPersonName"-->
                <!--android:padding="5dp"-->
                <!--android:textColor="@color/black" />-->

        <!--</TableRow>-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:fontFamily="@font/averia_libre_light"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/averia_libre_light"
                android:textSize="18sp"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:fontFamily="@font/averia_libre_light"
                android:textSize="18sp"
                android:text="@string/password_"
                android:textColor="@color/black"
                 />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/averia_libre_light"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/type"
                android:textColor="@color/black"
                android:fontFamily="@font/averia_libre_light"
                android:textSize="18sp"  />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/managerRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/manager"
                    android:fontFamily="@font/averia_libre_light"
                    android:textSize="18sp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/OnlineRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/online"
                    android:fontFamily="@font/averia_libre_light"
                    android:textSize="18sp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/CallRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_center"
                    android:fontFamily="@font/averia_libre_light"
                    android:textSize="18sp"
                    android:textColor="@color/black" />

            </RadioGroup>

        </TableRow>

        <!--        <TableLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="10dp"-->
        <!--            android:padding="20dp">-->

        <!--            -->

        <!--        </TableLayout>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal"
        android:layoutDirection="ltr"
        android:padding="5dp">


        <TextView
            android:id="@+id/Addbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:fontFamily="@font/averia_libre_light"
            android:textSize="16sp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Cancelbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/averia_libre_light"
            android:textSize="16sp"
            android:layout_marginHorizontal="15dp"
            android:textColor="@color/main_orange_light_color" />
    </LinearLayout>

</LinearLayout>