<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bac1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/goldf"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            app:srcCompat="@drawable/ic_add_to_queue_black_24dp_white"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/tital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/add_system"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bac2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bac_list_3"
        android:orientation="vertical"
        android:padding="30dp">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/ee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/system_no"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/sysId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textColor="@color/black" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/system_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/sysName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textColor="@color/black" />

        </TableRow>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:layoutDirection="ltr"
            android:padding="5dp">


            <Button
                android:id="@+id/Addbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bac_list_0_2"
                android:text="@string/add"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/Cancelbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bac_list_0_1_l"
                android:text="@string/cancel"
                android:textColor="@color/white" />
        </LinearLayout>

        <!--        <TableLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="10dp"-->
        <!--            android:padding="20dp">-->

        <!--            -->

        <!--        </TableLayout>-->
    </LinearLayout>

</LinearLayout>